Fix Legendary quality span text being too light

--- a/apps/frontend/scss/wow.scss
+++ b/apps/frontend/scss/wow.scss
@@ -226,7 +226,7 @@ img.quality4 {
         border-color: $quality5-border;
     }
     span {
-        color: #ffb400;
+        color: #ff8000;
     }
 }
 .quality5-border {
